@@ -38,6 +38,11 @@
 <p>2019-02-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/png.c (ReadMNGImage): Bound maximum loop iterations by
+subrange as a primitive means of limiting resource consumption.
+This should finally resolve oss-fuzz 12738
+&quot;graphicsmagick/enhance_fuzzer: Out-of-memory in
+graphicsmagick_enhance_fuzzer&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/tiff.c (ReadTIFFImage): Assure that opacity channel is
 initialized in the RGBAStrippedMethod case.  Convert
 'CorruptImageError' encountered while testing for more frames to
